SpotBugs DLS_DEAD_LOCAL_STORE: 9 production dead-store removals